[package]
name = "axum_dioxus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
dioxus = "0.3.2"
dioxus-liveview = "0.3.0"
pretty_env_logger = "0.4.0"
tokio = { version = "1.26.0", features = ["full"] }
